--- a/De Matterhorn.html
+++ b/De Matterhorn.html
@@ -16,7 +16,7 @@ content="Zermatt Zwitserland">
 <h1>De Matterhorn</h1>
 <nav>
 <a href="index.html">Index</a>
-<a href="Galerij.html">Galerij</a>
+<a href="galerij.html">Galerij</a>
 <a href="info.html">Info</a>
 </nav>
 </body>
