--- a/galerij.html
+++ b/galerij.html
@@ -34,7 +34,7 @@ content="Zermatt Zwitserland">
 <audio controls src="Geluiden/TRAIN Sound Effects - Steam Train Start and Whistle.mp3"></audio>    
 </header>
 <nav>
-    <a href="De Matterhorn.html">Ga terug</a>
+    <a href="dematterhorn.html">Ga terug</a>
 </nav>
 </body>
 </html>
