--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ content="Zermatt Zwitserland">
 <iframe src="https://www.zermatt.ch/en/matterhorn" width="1120" height="560"></iframe>
 </header>
 <nav>
-    <a href="De Matterhorn.html">Ga terug</a>
+    <a href="dematterhorn.html">Ga terug</a>
 </nav>
 </body>
 </html>
